--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ Anything You Can Fit In The Circle I’ll Pay For
 
 
 <script>
-alert('This is mohammed Kamil\nWelcome to my page\nHafsa')
+alert('This is mohammed Kamil\nWelcome to my page')
 </script>
 </body>
 </html>
